import 'package:animations/animations.dart';
import 'package:bun_app/providers/signin_provider.dart';
import 'package:bun_app/screens/auth_screen/register_screen.dart';
import 'package:flutter/gestures.dart';
import 'package:flutter/material.dart';
import 'package:provider/provider.dart';

class LoginScreen extends StatefulWidget {
  const LoginScreen({super.key});

  @override
  State<LoginScreen> createState() => _LoginScreenState();
}

class _LoginScreenState extends State<LoginScreen> {
  @override
  Widget build(BuildContext context) {
    final size = MediaQuery.sizeOf(context);
    return Scaffold(
      body: Stack(
        children: [
          Positioned(
              top: 0,
              child: Container(
                height: 300,
                width: size.width * 1,
                decoration: const BoxDecoration(
                    image: DecorationImage(
                        fit: BoxFit.cover,
                        image: AssetImage('assets/images/bunbg.png'))),
              )),
          Positioned(
              top: 250,
              child: Container(
                height: 800,
                width: size.width * 1,
                decoration: const BoxDecoration(
                    color: Color(0xff2B2A4C),
                    borderRadius: BorderRadius.only(
                        topLeft: Radius.circular(30),
                        topRight: Radius.circular(30))),
                child: Padding(
                  padding: const EdgeInsets.all(30.0),
                  child: Consumer<SigninProvider>(
                      builder: (context, value, child) {
                    return Column(
                      children: [
                        const Row(
                          children: [
                            Text(
                              "Login",
                              style: TextStyle(
                                  color: Colors.white,
                                  fontSize: 30,
                                  fontWeight: FontWeight.bold),
                            ),
                          ],
                        ),
                        const SizedBox(
                          height: 20,
                        ),

                        //Email TextField
                        TextField(
                          key: const ValueKey('emailField'),
                          controller: value.emailController,
                          decoration: InputDecoration(
                            fillColor: Colors.white,
                            filled: true,
                            hintText: 'Email',
                            border: OutlineInputBorder(
                              borderSide: BorderSide.none,
                              borderRadius: BorderRadius.circular(24),
                            ),
                          ),
                        ),
                        const SizedBox(
                          height: 10,
                        ),
                        //Password TextField
                        TextField(
                          key: const ValueKey('passwordField'),
                          obscureText: true,
                          controller: value.passwordController,
                          decoration: InputDecoration(
                            fillColor: Colors.white,
                            filled: true,
                            hintText: 'Password',
                            border: OutlineInputBorder(
                              borderSide: BorderSide.none,
                              borderRadius: BorderRadius.circular(24),
                            ),
                          ),
                        ),
                        const SizedBox(
                          height: 10,
                        ),
                        const Row(
                          mainAxisAlignment: MainAxisAlignment.end,
                          children: [
                            Text(
                              "Forget your password?",
                              style:
                                  TextStyle(color: Colors.white, fontSize: 15),
                            ),
                          ],
                        ),
                        const SizedBox(
                          height: 50,
                        ),
                        ElevatedButton(
                            key: const ValueKey('signInButton'),
                            style: ElevatedButton.styleFrom(
                                backgroundColor: const Color(0xffB31312)),
                            onPressed: () {
                              value.startSignIn(context);
                            },
                            child: const Text(
                              "Login",
                              style: TextStyle(color: Colors.white),
                            )),
                        const SizedBox(
                          height: 30,
                        ),
                        RichText(
                            text: TextSpan(
                                text: "I havn't an account.",
                                style: const TextStyle(
                                    color: Colors.white, fontSize: 15),
                                children: [
                              TextSpan(
                                  recognizer: TapGestureRecognizer()
                                    ..onTap = () {
                                      Navigator.of(context).push(
                                        PageRouteBuilder(
                                          pageBuilder: (context, animation,
                                              secondaryAnimation) {
                                            return const RegisterScreen();
                                          },
                                          transitionsBuilder: (context,
                                              animation,
                                              secondaryAnimation,
                                              child) {
                                            return SharedAxisTransition(
                                              animation: animation,
                                              secondaryAnimation:
                                                  secondaryAnimation,
                                              transitionType:
                                                  SharedAxisTransitionType
                                                      .horizontal,
                                              child: child,
                                            );
                                          },
                                        ),
                                      );
                                    },
                                  text: "Sign up",
                                  style: const TextStyle(
                                      color: Colors.red,
                                      fontWeight: FontWeight.bold))
                            ])),
                      ],
                    );
                  }),
                ),
              )),
        ],
      ),
    );
  }
}
