...
                                size: 25,
                              ),
                              SizedBox(
                                width: 20,
                              ),
                              Text(
                                key: ValueKey('logout'),
                                "Logout",
                                style: TextStyle(
                                    color: Colors.red,
                                    fontSize: 18,
                                    fontWeight: FontWeight.w500),
                              ),
...
